# claude-code-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: logging_demo.rs  quick_start.rs  safety_demo.rs
src/: client.rs  config.rs  errors.rs  lib.rs  types.rs
src/transport/: mod.rs  subprocess_cli.rs
tests/: test_client.rs  test_errors.rs  test_multiline_json.rs  test_safety.rs  test_types.rs
