[package]
name = "claude-code-sdk"
version = "0.0.2"
edition = "2021"
description = "Rust SDK for Claude Code"
readme = "README.md"
license = "MIT"
authors = ["eric <eric@epsilla.com>"]
keywords = ["claude", "ai", "sdk", "anthropic"]
categories = ["api-bindings", "development-tools"]
repository = "https://github.com/epsilla-cloud/claude-code-sdk-rust"
homepage = "https://github.com/epsilla-cloud/claude-code-sdk-rust"
documentation = "https://docs.anthropic.com/en/docs/claude-code/sdk"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"
home = "0.5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"

[lib]
name = "claude_code_sdk"
path = "src/lib.rs"

[[example]]
name = "quick_start"
path = "examples/quick_start.rs" 